--- a/frontend/src/app/componentes/administrador/agregar-producto/agregar-producto.component.html
+++ b/frontend/src/app/componentes/administrador/agregar-producto/agregar-producto.component.html
@@ -134,7 +134,7 @@
                   (imageSelected)="selected($event,'portada')"
                   [imageToDataUrl]="options"
                   class="d-none"
-                  #inputPortada
+                  #myInputPortada
                   >
                 </div>
 
@@ -168,8 +168,9 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="submit" [disabled]="formularioProducto.invalid" class="btn btn-agregar" (click)="agregarProducto()">Agregar producto</button>
+          <button type="submit"   class="btn btn-agregar" (click)="agregarProducto()">Agregar producto</button>
         </div>
       </div>
     </div>
   </div>
+  <!-- [disabled]="formularioProducto.invalid" -->
