--- a/frontend/src/app/componentes/administrador/inventario/inventario.component.html
+++ b/frontend/src/app/componentes/administrador/inventario/inventario.component.html
@@ -6,8 +6,8 @@
     <div>
         <div class="p-3 text-center">
             <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" data-toggle="modal" data-target="#addProductModal">Agregar producto</button>
-            <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" data-toggle="modal" data-target="#updateModal" (click)="updateModal.setProductInfo(1)">Modificar producto</button>
-            <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" (click)="deleteProducts()">Eliminar producto</button>
+            <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" data-toggle="modal" data-target="#updateModal" (click)="(idproductos) ? ((idproductos.length == 1) ?  updateModal.setProductInfo(idproductos[0]) : manyProductsAlert()) : emptyProductAlert()">Modificar producto</button>
+            <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" (click)="idproductos ? deleteProducts() : emptyProductAlert()">Eliminar producto</button>
         </div>
         <div class="table-responsive">
             <table class="table table-hover text-center">
@@ -49,14 +49,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    
+
                     <tr *ngFor="let producto of productosInventario | filterBy: productosFilterByName">
                         <td>
                             <div class="form-check">
-                                <input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="...">
+                                <input class="form-check-input position-static" type="checkbox" id="blankCheckbox" (input)='setProductId( producto.idproducto )' value="option1" aria-label="...">
                             </div>
                         </td>
-                        <th scope="row">{{producto.idproducto}}</th>
+                        <th scope="row" class="product-id">{{producto.idproducto}}</th>
                         <td>
                             <div class="imagen-producto ml-auto mr-auto">
                                 <img src="{{url+'get-image/'+producto.urlportada}}" alt="{{producto.nombre}}">
@@ -68,7 +68,7 @@
                         <td class="text-center">{{producto.cantidad}}</td>
                         <td>L {{producto.precio}}</td>
                         <td>
-                            <button class="btn btn-sm" type="button"><i class="fa fa-trash mr-4" aria-hidden="true"></i></button>
+                            <button class="btn btn-sm" type="button"><i class="fa fa-trash mr-4" aria-hidden="true" (click)="deleteProduct(producto.idproducto, 1)"></i></button>
                         </td>
                     </tr>
                     <tr *ngIf="(productos | filterBy: productosFilterByName || productos | filterBy: productosFilterByName).length === 0">
