--- a/frontend/src/app/componentes/actualizar-usuario/actualizar-usuario.component.html
+++ b/frontend/src/app/componentes/actualizar-usuario/actualizar-usuario.component.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="updateUserModalLabel"><i class="fas fa-1x" [class]='iconoModal'></i> Modificar {{ tituloModal }}</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" #closeModal (click)="resetForm()">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -15,7 +15,7 @@
                         <div class="form-group row">
                             <label for="nombreUsuario" class="col-sm-5 col-form-label">Nombre de usuario</label>
                             <div class="col-sm-7">
-                                <input type="text" [class.is-invalid]="nomUsuario.invalid && nomUsuario.touched" formControlName="nombreUsuario" name="nombreUsuario" class="form-control" id="nombreUsuario" placeholder="Nombre del producto" required>
+                                <input type="text" [class.is-invalid]="nomUsuario.invalid && nomUsuario.touched" formControlName="nombre" name="nombre" class="form-control" id="nombreUsuario" placeholder="Nombre del producto" required>
                                 <div class="invalid-feedback">
                                     Este campo es obligatorio
                                 </div>
@@ -27,9 +27,12 @@
                         <div class="form-group row">
                             <label for="contrasena" class="col-sm-5 col-form-label">Contraseña actual</label>
                             <div class="col-sm-7">
-                                <input type="password" [class.is-invalid]="contrasena.invalid && contrasena.touched" formControlName="contrasena" name="contrasena" class="form-control" id="contrasena" placeholder="Contraseña actual" required>
+                                <input type="password" [class.is-invalid]="contrasena.invalid && contrasena.touched" formControlName="contraseniaAnterior" name="contraseniaAnterior" class="form-control" id="contrasena" placeholder="Contraseña actual" required>
                                 <div class="invalid-feedback">
                                     Este campo es obligatorio
+                                </div>
+                                <div class="invalid-feedback" [class.d-block]="invalidPassword">
+                                    Ingrese su contraseña actual!
                                 </div>
                             </div>
                         </div>
@@ -37,7 +40,7 @@
                         <div class="form-group row">
                             <label for="nuevaContrasena" class="col-sm-5 col-form-label">Contraseña nueva</label>
                             <div class="col-sm-7">
-                                <input type="password" [class.is-invalid]="nuevaContrasena.invalid && nuevaContrasena.touched" formControlName="nuevaContrasena" name="nuevaContrasena" class="form-control" id="nuevaContrasena" placeholder="Nueva contraseña" required>
+                                <input type="password" [class.is-invalid]="nuevaContrasena.invalid && nuevaContrasena.touched" formControlName="contraseniaNueva" name="contraseniaNueva" class="form-control" id="nuevaContrasena" placeholder="Nueva contraseña" required>
                                 <div class="invalid-tooltip">
                                     <small> Debe tener al menos:</small> <br>
                                     <small><i class="fa fa-circle" aria-hidden="true"></i> Una mayúscula</small><br>
@@ -88,8 +91,8 @@
 
             <div class="modal-footer">
                 <div class="mx-auto">
-                    <button type="button" class="btn btn-primary mr-4" (click)="submitForm()">Guardar Cambios</button>
-                    <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="nomUsuario.reset(nombre)">Cancelar</button>
+                    <button type="button" class="btn btn-primary mr-4" (click)="updateUserInfo()">Guardar Cambios</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="resetForm()">Cancelar</button>
                 </div>
             </div>
         </div>
