--- a/frontend/src/app/componentes/administrador/inventario/inventario.component.html
+++ b/frontend/src/app/componentes/administrador/inventario/inventario.component.html
@@ -6,7 +6,7 @@
     <div>
         <div class="p-3 text-center">
             <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" data-toggle="modal" data-target="#addProductModal">Agregar producto</button>
-            <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" data-toggle="modal" data-target="#updateModal" (click)="(idproductos) ? ((idproductos.length == 1) ?  updateModal.setProductInfo(idproductos[0]) : manyProductsAlert()) : emptyProductAlert()">Modificar producto</button>
+            <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" data-toggle="modal" data-target="#updateModal" (click)="(idproductos) ? ((idproductos.length === 1) ?  updateModal.setProductInfo(idproductos[0]) : (idproductos.length > 1) ? manyProductsAlert() : emptyProductAlert()) : emptyProductAlert()">Modificar producto</button>
             <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" (click)="idproductos ? deleteProducts() : emptyProductAlert()">Eliminar producto</button>
         </div>
         <div class="table-responsive">
