--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -54,7 +54,7 @@
                             <li class="nav-item">
                                 <div class="btn-group" style="padding-right: 10px;">
                                     <button type="button" id="usuario" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
-                 {{nombreUsuario}}
+                 {{ (nombreActualizado) ? nombreActualizado : nombreUsuario}}
                 </button>
                                     <div class="dropdown-menu dropdown-menu-lg-right" routerLinkActive="active">
                                         <button class="dropdown-item" type="button" [routerLink]="['/perfil']">Mi Perfil</button>
