Creación del componente Acerca de Nosotros
Mision, Vision,Valores

--- a/frontend/src/app/componentes/informacion/informacion.component.html
+++ b/frontend/src/app/componentes/informacion/informacion.component.html
@@ -1,5 +1,47 @@
-<app-encabezado></app-encabezado>
+<div>
+    <app-encabezado></app-encabezado>
+</div>
+<div class="conteiner">
+    <img width="100%" src="assets/img/portada1.jpg" alt="">
+</div>
 
-<h1 id="cactus">Misión</h1>
 
-<h1 id="cactus">Visión</h1>
+<body>
+    <div class="container">
+        <div class="row div1">
+            <div class="col-8">
+                <h1 id="cactus">Misión</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat quas impedit, itaque repellendus temporibus blanditiis, iure laborum ipsum architecto sunt sit mollitia asperiores quae autem eos similique, sint magnam.</p>
+            </div>
+            <div class="col-4">
+
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid" id="valores">
+        <div class="row div3">
+            <div class="col-8">
+                <h1 id="cactus">Valores</h1>
+
+            </div>
+            <div class="col-4">
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container">
+        <div class="row div2">
+            <div class="col-4">
+
+            </div>
+            <div class="col-8">
+                <h2 id="vision">Visión</h2>
+                <p id="p3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat quas impedit, itaque repellendus temporibus blanditiis, iure laborum ipsum architecto sunt sit mollitia asperiores quae autem eos similique, sint magnam.</p>
+            </div>
+        </div>
+    </div>
+</body>
+<app-piepagina></app-piepagina>
