--- a/frontend/src/app/componentes/compartidos/piepagina/piepagina.component.html
+++ b/frontend/src/app/componentes/compartidos/piepagina/piepagina.component.html
@@ -1,1 +1,43 @@
-<p>piepagina works!</p>
+<!-- Footer -->
+<footer class="page-footer font-small cyan darken-3 foot" style="background: linear-gradient(to left, #72d4da, #91fc9a);;">
+
+    <!-- Footer Elements -->
+    <div class="container">
+
+        <!-- Grid row-->
+        <div class="row">
+
+            <!-- Grid column -->
+            <div class="col-md-12 py-5 iconos">
+                <div class="mb-2 flex-center ">
+
+                    <!-- Facebook -->
+                    <a class="fb-ic">
+                        <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                    </a>
+
+                    <!--Instagram-->
+                    <a class="ins-ic">
+                        <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                    </a>
+                    <!--Pinterest-->
+                    <a class="pin-ic">
+                        <i class="fab fa-whatsapp fa-lg white-text fa-2x"> </i>
+
+                    </a>
+                </div>
+            </div>
+            <!-- Grid column -->
+
+        </div>
+        <!-- Grid row-->
+
+    </div>
+    <!-- Footer Elements -->
+
+    <!-- Copyright -->
+
+    <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
