--- a/frontend/src/app/componentes/informacion/informacion.component.css
+++ b/frontend/src/app/componentes/informacion/informacion.component.css
@@ -4,10 +4,50 @@ h1 {
     -webkit-background-clip: text;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-transform: uppercase;
-    font-size: 50px;
+    font-size: 5vw;
     font-weight: bold;
     text-align: left;
     letter-spacing: -2px;
-    line-height: 110px;
-    margin-left: 50px;
+    line-height: 90px;
+}
+
+h2 {
+    color: transparent;
+    background: url(/assets/img/1C.png) repeat;
+    -webkit-background-clip: text;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
+    font-size: 5vw;
+    font-weight: bold;
+    text-align: right;
+    letter-spacing: -2px;
+    line-height: 90px;
+}
+
+.div1 {
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: 1%;
+    margin-bottom: 5%;
+}
+
+.div2 {
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: 1%;
+    margin-bottom: 2%;
+}
+
+.div3 {
+    background-color: rgb(184, 233, 134);
+    margin-bottom: 2%;
+    padding-left: 12%;
+}
+
+p {
+    padding-right: 1%;
+}
+
+.p3 {
+    text-align: right;
 }
