Mejora Diseño Misión,Visión y Valores
Información de la empresa en el pie de página

--- a/frontend/src/app/componentes/compartidos/piepagina/piepagina.component.css
+++ b/frontend/src/app/componentes/compartidos/piepagina/piepagina.component.css
@@ -2,4 +2,14 @@
     text-align: center;
 }
 
-.foot {}
+p {
+    font-size: 110%;
+    margin-bottom: 6%;
+    font-weight: bold;
+    color: rgb(0, 133, 104);
+}
+
+.facebook1:hover {
+    color: white;
+    font-size: 210%;
+}
