--- a/frontend/src/app/componentes/compartidos/piepagina/piepagina.component.html
+++ b/frontend/src/app/componentes/compartidos/piepagina/piepagina.component.html
@@ -7,24 +7,50 @@
         <!-- Grid row-->
         <div class="row">
 
-            <!-- Grid column -->
-            <div class="col-md-12 py-5 iconos">
+            <div class="col-md-4 py-5 iconos">
                 <div class="mb-2 flex-center ">
-
+                    <p>Contactanos</p>
                     <!-- Facebook -->
                     <a class="fb-ic">
-                        <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+
+                        <i class="fas fa-phone fa-lg white-text mr-md-4 mr-2 fa-2x"></i> <span>22227-6789</span>
                     </a>
 
                     <!--Instagram-->
-                    <a class="ins-ic">
-                        <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                    </a>
-                    <!--Pinterest-->
                     <a class="pin-ic">
-                        <i class="fab fa-whatsapp fa-lg white-text fa-2x"> </i>
+                        <i class="fab fa-whatsapp fa-lg white-text mr-md-4 mr-2 ml-4 fa-2x"> </i> <span>9078-5560</span>
 
                     </a>
+
+                </div>
+            </div>
+
+
+            <div class="col-md-4 py-5 iconos">
+                <div class="mb-2 flex-center ">
+                    <img width="80" height="75" src="assets/img/logo_vector.png" alt="">
+
+                </div>
+            </div>
+
+            <!-- Grid column -->
+            <div class="col-md-4 py-5 iconos">
+                <div class="mb-2 flex-center ">
+                    <div>
+                        <p>Redes Sociales</p>
+                    </div>
+
+                    <!-- Facebook -->
+                    <a href="https://www.facebook.com/CactusHNTeg" class="fb-ic" style="color:black !important ;">
+                        <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x facebook1"> </i>
+                    </a>
+
+                    <!--Instagram-->
+                    <a href="http://www.instagram.com/cactus_hn" class="ins-ic" style="color:black !important ;">
+                        <i class="fab fa-instagram fa-lg white-text mr-md-0 mr-3  fa-2x facebook1"> </i>
+                    </a>
+                    <!--Pinterest-->
+
                 </div>
             </div>
             <!-- Grid column -->
@@ -33,11 +59,6 @@
         <!-- Grid row-->
 
     </div>
-    <!-- Footer Elements -->
-
-    <!-- Copyright -->
-
-    <!-- Copyright -->
 
 </footer>
 <!-- Footer -->
