--- a/frontend/src/app/componentes/informacion/informacion.component.html
+++ b/frontend/src/app/componentes/informacion/informacion.component.html
@@ -1,47 +1,55 @@
-<div>
-    <app-encabezado></app-encabezado>
-</div>
-<div class="conteiner">
-    <img width="100%" src="assets/img/portada1.jpg" alt="">
-</div>
+<app-encabezado>
+</app-encabezado>
 
+
+<img width="100%" src="assets/img/portada1.jpg" alt="">
 
 <body>
-    <div class="container">
-        <div class="row div1">
-            <div class="col-8">
-                <h1 id="cactus">Misión</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat quas impedit, itaque repellendus temporibus blanditiis, iure laborum ipsum architecto sunt sit mollitia asperiores quae autem eos similique, sint magnam.</p>
-            </div>
-            <div class="col-4">
-
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid" id="valores">
-        <div class="row div3">
-            <div class="col-8">
-                <h1 id="cactus">Valores</h1>
-
-            </div>
-            <div class="col-4">
-
-            </div>
-        </div>
+    <div class="contenedor1">
+        <main class="contenido">
+            <h1 id="cactus">Misión</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis rutrum gravida. Aliquam vel nunc sit amet nibh aliquam sollicitudin eu vitae elit. Duis varius turpis est, at feugiat metus blandit non. Mauris est nunc, ullamcorper nec egestas
+            </p>
+        </main>
+        <aside class="sidebar">
+            <img width="400" height="200" src="assets/img/mision.jpg" alt="">
+        </aside>
     </div>
 
 
-    <div class="container">
-        <div class="row div2">
-            <div class="col-4">
 
-            </div>
-            <div class="col-8">
-                <h2 id="vision">Visión</h2>
-                <p id="p3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat quas impedit, itaque repellendus temporibus blanditiis, iure laborum ipsum architecto sunt sit mollitia asperiores quae autem eos similique, sint magnam.</p>
-            </div>
+    <div class="contenedor2">
+
+        <div class="titulo">
+            <h1 id="cactus">Valores</h1>
         </div>
+
+        <div class=" container lista">
+            <ul class="list-group">
+                <li class="list-group-item">Valor 1</li>
+                <li class="list-group-item ">Valor 2</li>
+                <li class="list-group-item ">Valor 3</li>
+                <li class="list-group-item ">Valor 4</li>
+                <li class="list-group-item ">Valor 5</li>
+                <li class="list-group-item ">Valor 6</li>
+
+            </ul>
+        </div>
+
+
+    </div>
+
+    <div class="contenedor1">
+        <main class="contenido">
+            <h1 id="cactus">Visión</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis rutrum gravida. Aliquam vel nunc sit amet nibh aliquam sollicitudin eu vitae elit. Duis varius turpis est, at feugiat metus blandit non. Mauris est nunc, ullamcorper nec egestas
+            </p>
+        </main>
+        <aside class="sidebar">
+            <img width="400" height="200" src="assets/img/vision.jpg" alt="">
+        </aside>
     </div>
 </body>
 <app-piepagina></app-piepagina>
