--- a/frontend/src/app/componentes/informacion/informacion.component.html
+++ b/frontend/src/app/componentes/informacion/informacion.component.html
@@ -51,5 +51,18 @@
             <img width="400" height="200" src="assets/img/vision.jpg" alt="">
         </aside>
     </div>
+    <div class="contenedor-mapa">
+        <main class="contenido ml-3">
+            <h1 id="cactus">Ubicación</h1>
+            <p>Tegucigalpa M.D.C; F.M</p>
+            <p>Anillo periférico</p>
+            <p>Km X</p>
+        </main>
+        <aside class="sidebar">
+            <!-- <agm-map [latitude]="latitud" [zoom]="zoom" [longitude]="longitud" class="ml-auto" (mapClick)="ubicacionSeleccionada($event)">
+                <agm-marker  [latitude]="latitud" [longitude]="longitud"></agm-marker>
+            </agm-map> -->
+        </aside>
+    </div>
 </body>
 <app-piepagina></app-piepagina>
