Búsqueda de productos desde navbar
Se creó el servicio para buscar productos por nombre o categoría desde el navbar

--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -44,7 +44,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="addon-wrapping"><i class="fas fa-search"></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Buscar Producto" aria-label="Username" aria-describedby="addon-wrapping">
+                        <input type="text" class="form-control" placeholder="Buscar Producto" [(ngModel)]="terminoBusqueda" name="terminoBusqueda" (input)='searchProducts()' aria-label="Username" aria-describedby="addon-wrapping">
                     </div>
                 </li>
 
