--- a/frontend/src/app/componentes/promocion/promocion.component.html
+++ b/frontend/src/app/componentes/promocion/promocion.component.html
@@ -2,68 +2,130 @@
 
 <app-carrusel-promo></app-carrusel-promo>
 
-<div class="container">
 
-    <div class="row">
-        <div class="card">
-            <div class="card-header">
-                <img src="assets/img/Cat1.jpg" class="card-img-top " alt="...">
-                <h2> Nombre Producto</h2>
-            </div>
-            <div class="card-body">
-                <p>
-                    Precio Anterior:
-                </p>
-                <p>
-                    Precio Actual:
-                </p>
-                <a href="#" class="btn">Comprar Ahora</a>
+<div class="container">
+    <h1>PROMOCIONES</h1>
+</div>
+
+<div class=" container">
+    <div class="input-group flex-nowrap " style="margin-top: 5px; width: 50%;">
+        <div class="input-group-prepend">
+            <span class="input-group-text" id="addon-wrapping"><i class="fas fa-search"></i></span>
+        </div>
+        <input type="text" class="form-control" placeholder="Buscar Promoción" aria-label="Username" aria-describedby="addon-wrapping">
+    </div>
+</div>
+
+
+
+<div class="container mt-3">
+
+    <div class="row justify-content-center">
+
+        <div class="col-md-4 col-12">
+            <div class="card">
+                <div class="card-header ">
+                    <div class="img-animtion image-promo">
+                        <img src="assets/img/productos/injerto.jpg" alt="" class="card-img-top imagenes">
+                    </div>
+                </div>
+                <div class="card-body text-center" id="divPadre">
+                    <div id="circulo" class="card-title">
+                        <h3>10%</h3>
+                    </div>
+                    <h5 class="card-title">
+                        Nombre Producto
+                    </h5>
+                    <p class="card-text" style="font-size: 1.3em;">
+                        <span> Precio</span> <span>  L. </span> <span><s>COSTO</s></span>
+                    </p>
+                    <p class="card-text " style="font-size: 2em; color: rgb(0, 145, 77);">
+                        <span>  L. </span> <span>250</span>
+                    </p>
+                    <div class=" container">
+                        <div class="row">
+                            <div class=" col-8">
+                                <button type="button" class="btn btn-outline-success">Comprar Ahora</button>
+                            </div>
+                            <div class=" col-4">
+                                <i class="fas fa-shopping-cart icono"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="card">
-            <div class="card-header">
-                <img src="assets/img/Cat1.jpg" class="card-img-top " alt="...">
-                <h2> Nombre Producto</h2>
-            </div>
-            <div class="card-body">
-                <p>
-                    Precio Anterior:
-                </p>
-                <p>
-                    Precio Actual:
-                </p>
-                <a href="#" class="btn">Comprar Ahora</a>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-header">
-                <img src="assets/img/Cat1.jpg" class="card-img-top " alt="...">
-                <h2> Nombre Producto</h2>
-            </div>
-            <div class="card-body">
-                <p>
-                    Precio Anterior:
-                </p>
-                <p>
-                    Precio Actual:
-                </p>
-                <a href="#" class="btn">Comprar Ahora</a>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-header">
-                <img src="assets/img/Cat1.jpg" class="card-img-top " alt="...">
-                <h2> Nombre Producto</h2>
-            </div>
-            <div class="card-body">
-                <p>
-                    Precio Anterior:
-                </p>
-                <p>
-                    Precio Actual:
-                </p>
-                <a href="#" class="btn">Comprar Ahora</a>
+
+
+        <div class="col-md-4 col-12">
+            <div class="card">
+                <div class="card-header ">
+                    <div class="img-animtion image-promo">
+                        <img src="assets/img/productos/neon.jpg" alt="" class="card-img-top imagenes">
+                    </div>
+                </div>
+                <div class="card-body text-center" id="divPadre">
+                    <div id="circulo" class="card-title">
+                        <h3>10%</h3>
+                    </div>
+                    <h5 class="card-title">
+                        Nombre Producto
+                    </h5>
+                    <p class="card-text" style="font-size: 1.3em;">
+                        <span> Precio</span> <span>  L. </span> <span><s>COSTO</s></span>
+                    </p>
+                    <p class="card-text " style="font-size: 2em; color: rgb(0, 145, 77);">
+                        <span>  L. </span> <span>250</span>
+                    </p>
+                    <div class=" container">
+                        <div class="row">
+                            <div class=" col-8">
+                                <button type="button" class="btn btn-outline-success">Comprar Ahora</button>
+                            </div>
+                            <div class=" col-4">
+                                <i class="fas fa-shopping-cart icono"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
+
+        <div class="col-md-4 col-12">
+            <div class="card">
+                <div class="card-header ">
+                    <div class="img-animtion image-promo">
+                        <img src="assets/img/productos/lola.jpg" alt="" class="card-img-top imagenes">
+                    </div>
+                </div>
+                <div class="card-body text-center" id="divPadre">
+                    <div id="circulo" class="card-title">
+                        <h3>10%</h3>
+                    </div>
+                    <h5 class="card-title">
+                        Nombre Producto
+                    </h5>
+                    <p class="card-text" style="font-size: 1.3em;">
+                        <span> Precio</span> <span>  L. </span> <span><s>COSTO</s></span>
+                    </p>
+                    <p class="card-text " style="font-size: 2em; color: rgb(0, 145, 77);">
+                        <span>  L. </span> <span>250</span>
+                    </p>
+                    <div class=" container">
+                        <div class="row">
+                            <div class=" col-8">
+                                <button type="button" class="btn btn-outline-success">Comprar Ahora</button>
+                            </div>
+                            <div class=" col-4">
+                                <i class="fas fa-shopping-cart icono"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </div>
