--- a/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.html
+++ b/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.html
@@ -30,7 +30,7 @@
 
                     <span class="span">Usuarios</span>
                 </a>
-                <a class="list-group-item list-group-item-action">
+                <a [routerLink]="['./promociones']" class="list-group-item list-group-item-action">
                     <i class="fas fa-percent icono"></i>
 
                     <span class="span">Promociones</span>
