--- a/frontend/src/app/componentes/administrador/inventario/inventario.component.html
+++ b/frontend/src/app/componentes/administrador/inventario/inventario.component.html
@@ -68,7 +68,9 @@
                         <td class="text-center">{{producto.cantidad}}</td>
                         <td>L {{producto.precio}}</td>
                         <td>
-                            <button class="btn btn-sm" type="button"><i class="fa fa-trash mr-4" aria-hidden="true" (click)="deleteProduct(producto.idproducto, 1)"></i></button>
+                            <button class="btn btn-sm w-50" type="button"><i class="fa fa-trash mr-4" aria-hidden="true" (click)="deleteProduct(producto.idproducto, 1)"></i></button>
+                            <img  class="ml-1 add-discount"  style="width: 20px;" src="assets/img/administrador/offer.png"  (input)='setProductId( producto.idproducto )' alt="add-promocion"  data-toggle="modal" data-target="#addDiscountModal" data-placement="bottom" title="Añadir promoción">
+                          
                         </td>
                     </tr>
                     <tr *ngIf="(productos | filterBy: productosFilterByName || productos | filterBy: productosFilterByName).length === 0">
@@ -82,5 +84,6 @@
     </div>
 </div>
 
+<app-agregar-promocion></app-agregar-promocion>
 <app-modificar-producto #updateModal></app-modificar-producto>
 <app-agregar-producto (nuevoProducto)="recibeNuevoProducto($event)"></app-agregar-producto>
