--- a/frontend/src/app/componentes/administrador/agregar-promocion/agregar-promocion.component.html
+++ b/frontend/src/app/componentes/administrador/agregar-promocion/agregar-promocion.component.html
@@ -44,6 +44,9 @@
                         </div>
                       </div>
                     </div>
+                    <div class="col-md-9 mb-3">
+                      <img class="ml-auto w-50 float-right" style="opacity: 35%" src="../../../../assets/img/administrador/fotos.jpg">
+                    </div>
                 </div>
               </div>
             </div>
